# actix-web-react-template

./: Cargo.toml  README.md  Taskfile.yaml
src/: actix.rs  main.rs
template/: Taskfile.yaml  compose.yml  main.rs
